<resources>
    <string name="lg_english">English</string>
    <string name="lg_french">French</string>
    <string name="lg_hindi">Hindi</string>
    <string name="lg_china">China</string>
    <string name="lg_spanish">Spanish</string>
    <string name="lg_portuguese">Portuguese</string>
    <string name="lg_indo">Indonesian</string>
    <string name="lg_japan">Japanese</string>
    <string name="lg_korean">Korean</string>
    <string name="lg_vietnam">Vietnamese</string>
    <string name="app_name">Clap Finder</string>
    <string name="service_running">Clap Finder is running</string>
    <string name="language">Language</string>
    <string name="permission">Permission</string>
    <string name="txt_detail_grant_permission">The Application needs<b> Recording Permission </b>to provide phone finder by clapping</string>
    <string name="txtvolume">Volume</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txtshare">Share</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="txt_go">Go</string>
    <string name="txt_sound">Alert Sound</string>
    <string name="tapToDeActiveTitle">Tap to deactive</string>
    <string name="flashlightTitle">Flashlight</string>
    <string name="vibrationTitle">Vibration</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_choose_sound_ss">Set sound %1$s success </string>
    <string name="txt_allow_access_notification">Notifications</string>
    <string name="txt_allow_access_recording">Recording</string>
    <string name="cat_meowing">Cat meowing</string>
    <string name="dog_barking">Dog barking</string>
    <string name="laugh">Laugh</string>
    <string name="chicken">Chicken</string>
    <string name="police_whistle">Police whistle</string>
    <string name="door_bell">Door Bell</string>
    <string name="cavalry">Cavalry</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="tap_under_to_activate_clap_nfinder_mode">Tap \"under\" to activate Clap\nFinder mode.</string>
    <string name="sound_alert">Alert</string>
    <string name="train_horn">Train horn</string>
    <string name="party_horn">Boat horn</string>
    <string name="find_me_n_i_am_here">Find me.\nI am here!</string>
    <string name="stop_lbl">STOP</string>
    <string name="custom_sound">Custom sound: </string>
    <string name="custom_sound_chose">Choose</string>
    <string name="settings">Settings</string>
    <string name="charging_alarm">Charging Alarm</string>
    <string name="tap_under_to_activate_charing">Tap \"Start\" to activate\nUnplugged Charging Alarm mode.</string>
    <string name="tap_under_to_activate_charing_stop">Mode is enabled. Now if someone disconnects it from charging, it will start beeping.</string>
    <string name="start_tt">START</string>
    <string name="stop_tt">STOP</string>
</resources>