<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <com.findmyphone.clapping.find.view.main.tab.TabBarItemView
        android:id="@+id/tab1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tab2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tab_icon="@drawable/hands_clap_1"
        app:tab_selected="true"
        app:tab_text="@string/app_name" />

    <com.findmyphone.clapping.find.view.main.tab.TabBarItemView
        android:id="@+id/tab2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tab3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tab1"
        app:layout_constraintTop_toTopOf="parent"
        app:tab_icon="@drawable/ic_alarm_1"
        app:tab_selected="false"
        app:tab_text="@string/charging_alarm" />

    <com.findmyphone.clapping.find.view.main.tab.TabBarItemView
        android:id="@+id/tab3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tab2"
        app:layout_constraintTop_toTopOf="parent"
        app:tab_icon="@drawable/setting2"
        app:tab_selected="false"
        app:tab_text="@string/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>



