<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.findmyphone.clapping.find.resource.customView.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:action_right_title="@string/txt_go"
        app:cs_title="@string/permission"
        app:layout_constraintTop_toTopOf="parent"
        app:left_action_type="none"
        app:right_action_type="text" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/fr_ads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.findmyphone.clapping.find.resource.customView.BaseTextview
                android:id="@+id/txt_permission_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/txt_detail_grant_permission"
                android:textColor="@color/txt_color" />

            <RelativeLayout
                android:id="@+id/containerRecordAudio"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_switch_permission">

                <Switch
                    android:id="@+id/switch_record_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumbTint="@color/white"
                    android:trackTint="#CFCFCF"
                    android:trackTintMode="src_over"
                    app:track="@drawable/track_backgroudn" />


                <com.findmyphone.clapping.find.resource.customView.BaseTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_allow_access_recording"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/containerPermission"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_switch_permission">

                <Switch
                    android:id="@+id/switch_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumbTint="@color/white"
                    android:trackTint="#CFCFCF"
                    android:trackTintMode="src_over"
                    app:track="@drawable/track_backgroudn"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


                <com.findmyphone.clapping.find.resource.customView.BaseTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/txt_allow_access_notification"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />


            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_shimmer_native_language" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>