<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.findmyphone.clapping.find.resource.customView.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cs_title="@string/charging_alarm"
        app:layout_constraintTop_toTopOf="parent"
        app:left_action_type="none"
        app:right_action_type="image"
        app:src_right="@drawable/ic_music" />

    <TextView
        android:id="@+id/txtActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/tap_under_to_activate_charing"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.7"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/frm_native"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.34"
        app:srcCompat="@drawable/ic_tap_1"
        tools:layout_editor_absoluteX="112dp" />

    <FrameLayout
        android:id="@+id/frm_native"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="8dp"
        android:minHeight="130dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/layout_shimmer"
            layout="@layout/ads_shimmer_native_small" />
    </FrameLayout>

    <com.findmyphone.clapping.find.resource.customView.BaseTextview
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_start_button"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/start_tt"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
