<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.findmyphone.clapping.find.resource.customView.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cs_title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:left_action_type="none"
        app:right_action_type="image"
        app:src_right="@drawable/ic_music" />

    <TextView
        android:id="@+id/txtActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/tap_under_to_activate_clap_nfinder_mode"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutMusic"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/layoutMusic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frm_native"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.46">

        <ImageView
            android:id="@+id/imgCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBackgroundActive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_active_sound"
            app:layout_constraintBottom_toBottomOf="@id/imgCircle"
            app:layout_constraintEnd_toEndOf="@id/imgCircle"
            app:layout_constraintStart_toStartOf="@id/imgCircle"
            app:layout_constraintTop_toTopOf="@id/imgCircle" />

        <ImageView
            android:id="@+id/imgMusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/clapping"
            app:layout_constraintBottom_toBottomOf="@id/imgBackgroundActive"
            app:layout_constraintEnd_toEndOf="@id/imgBackgroundActive"
            app:layout_constraintStart_toStartOf="@id/imgBackgroundActive"
            app:layout_constraintTop_toTopOf="@id/imgBackgroundActive"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btnActive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/imgCircle"
            app:layout_constraintEnd_toEndOf="@+id/imgCircle"
            app:layout_constraintStart_toStartOf="@+id/imgCircle"
            app:layout_constraintTop_toTopOf="@+id/imgCircle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frm_native"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="8dp"
        android:minHeight="130dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btnFlash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/layout_shimmer"
            layout="@layout/ads_shimmer_native_small" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnFlash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/dimen_16"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVibra"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/frm_native"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16">

            <ImageView
                android:id="@+id/imgFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_flash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtFlashLight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="16dp" />

            <com.findmyphone.clapping.find.resource.customView.BaseTextview
                android:id="@+id/txtFlashLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgFlash"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/flashlightTitle"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgFlash"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnVibra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgVibra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_vibration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtVib"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.findmyphone.clapping.find.resource.customView.BaseTextview
                android:id="@+id/txtVib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/vibrationTitle"
                android:textColor="@color/txt_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgVibra"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
